assets/css/screen.css
/* ... */
.site-footer-nav ul {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 0 0 20px;
    padding: 0;
    list-style: none;
}

.site-footer-nav li {
    display: inline-flex;
    align-items: center;
    padding: 0;
    margin: 0;
    line-height: 2em;
}

.site-footer-nav a {
    position: relative;
    display: inline-flex;
    align-items: center;
    margin-left: 10px;
}

.site-footer-nav li:not(:first-child) a:before {
    content: "";
    display: block;
    width: 2px;
    height: 2px;
    margin: 0 10px 0 0;
    background: #fff;
    border-radius: 100%;
}

@media (max-width: 767px) {
    .site-footer .inner {
        max-width: 500px;
        grid-template-columns: 1fr;
        grid-gap: 0;
        text-align: center;
    }
    .site-footer .copyright,
    .site-footer .copyright a {
        color: #fff;
        font-size: 1.5rem;
    }
    .site-footer .copyright {
        margin-bottom: 16px;
    }
}


/* 11. Dark Mode
/* ---------------------------------------------------------- */

html.dark-mode body {
    color: rgba(255, 255, 255, 0.75);
    background: var(--color-darkmode);
}

html.dark-mode img {
    opacity: 0.9;
}

html.dark-mode kbd {
    background: color-mod(var(--color-darkmode) l(+5%));
}

html.dark-mode figcaption a {
    color: #fff;
}

html.dark-mode body:not(.has-cover) .gh-head {
    background: var(--color-darkmode);
    color: #fff;
}

html.dark-mode .gh-burger::before,
html.dark-mode .gh-burger::after {
    background-color: #fff;
}

html.dark-mode .site-header-content {
    color: #fff;
}

html.dark-mode .site-header-cover {
    opacity: 1;
}

html.dark-mode .post-card-image {
    background: var(--color-darkmode);
}

html.dark-mode :is(.post-card-tags, .post-card-meta, .article-tag a, .byline-meta-content, .pagination .page-number) {
    color: var(--color-secondary-text);
}

html.dark-mode .post-card-featured {
    color: #fff;
}

html.dark-mode .post-card-title {
    color: #fff;
}

html.dark-mode .post-card-excerpt {
    color: var(--color-secondary-text);
}

html.dark-mode .pagination a {
    color: #fff;
}

html.dark-mode .author-profile-location {
    color: #fff;
}

html.dark-mode .author-profile-social-link:hover {
    color: #fff;
}

html.dark-mode .article-title {
    color: #fff;
}

html.dark-mode .article-excerpt {
    color: var(--color-secondary-text);
}

html.dark-mode .post-full-image {
    background-color: color-mod(var(--color-darkmode) l(+8%));
}

html.dark-mode .author-avatar {
    border-color: var(--color-darkmode);
    background-color: color-mod(var(--color-darkmode) l(+8%));
}

html.dark-mode .author-profile-image {
    opacity: 1;
}

html.dark-mode .author-profile-image path {
    fill: var(--color-darkmode);
}

html.dark-mode .article-byline-meta .author-name a {
    color: #fff;
}

html.dark-mode .no-image .author-social-link a {
    color: rgba(255, 255, 255, 0.75);
}

html.dark-mode .gh-content > [id] {
    color: rgba(255, 255, 255, 0.9);
}

html.dark-mode .gh-content pre {
    background: color-mod(var(--color-darkgrey) l(-8%));
}

html.dark-mode .gh-content :not(pre) > code {
    background: color-mod(var(--color-darkgrey) l(+6%));
    border-color: color-mod(var(--color-darkmode) l(+8%));
    color: var(--color-wash);
}

:where(html.dark-mode) .gh-content a {
    color: #fff;
}

html.dark-mode .gh-content code {
    color: #fff;
    background: #000;
}

html.dark-mode hr {
    border-top-color: color-mod(var(--color-darkmode) l(+8%));
}

html.dark-mode .gh-content hr:after {
    background: color-mod(var(--color-darkmode) l(+8%));
    box-shadow: var(--color-darkmode) 0 0 0 5px;
}

html.dark-mode figcaption {
    color: rgba(255, 255, 255, 0.6);
}

html.dark-mode .gh-content table:not(.gist table) td:first-child {
    background-image: linear-gradient(to right, var(--color-darkmode) 50%, color-mod(var(--color-darkmode) a(0%)) 100%);
}

html.dark-mode .gh-content table:not(.gist table) td:last-child {
    background-image: linear-gradient(to left, var(--color-darkmode) 50%, color-mod(var(--color-darkmode) a(0%)) 100%);
}

html.dark-mode .gh-content table:not(.gist table) th {
    color: rgba(255, 255, 255, 0.85);
    background-color: color-mod(var(--color-darkmode) lightness(17%));
}

html.dark-mode .gh-content table:not(.gist table) th,
html.dark-mode .gh-content table:not(.gist table) td {
    border: color-mod(var(--color-darkmode) lightness(17%)) 1px solid;
}

html.dark-mode .gh-content :is(input, textarea) {
    color: color-mod(var(--color-midgrey) l(-30%));
}

html.dark-mode .site-archive-header .no-image {
    color: rgba(255, 255, 255, 0.9);
    background: var(--color-darkmode);
}

html.dark-mode .kg-header-card.kg-style-dark {
    background: color-mod(var(--color-darkgrey) l(-5%));
}

html.dark-mode .kg-header-card.kg-style-light {
    background: color-mod(var(--color-darkgrey) l(+5%));
}

html.dark-mode .kg-header-card h2.kg-header-card-header,
html.dark-mode .kg-header-card h3.kg-header-card-subheader {
    color: #fff;
}

html.dark-mode .kg-bookmark-card a.kg-bookmark-container,
html.dark-mode .kg-bookmark-card a.kg-bookmark-container:hover {
    background: var(--color-darkmode) !important;
    color: #fff !important;
}

html.dark-mode .footer-cta-title {
    color: #fff;
}

@media (max-width: 767px) {
    html.dark-mode .gh-head-open:not(.has-cover) #gh-head,
    html.dark-mode .gh-head-open:not(.has-cover) #gh-head .gh-head-actions {
        background: var(--color-darkmode);
    }
}
/* ... */

